@@ -32,6 +32,14 @@ Version 1.7.1
        command buttons. (Stefan)
 - BUG: Issue #106: "Search for:" string is
        trimmed forcibly in TortoiseMerge. (Stefan)
+- BUG: Issue #107: Crash when editing
+       externals property. (Stefan)
+- BUG: Issue #108: log dialog uses wrong
+       file if sorted. (Stefan)
+- BUG: Issue #109: Log dialog does not
+       refresh correctly. (Stefan)
+- BUG: Issue #110: Bogus entries in
+       Language Combo on x64. (Stefan)
 
 Version 1.7.0
 Too many changes to list here. See the release notes for
